--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ deno_console = { version = "0.121.0" }
 deno_crypto =  { version = "0.135.0" }
 deno_fetch = { version = "0.145.0" }
 deno_fs = { version = "0.31.0", features = ["sync_fs"] }
+deno_ffi = { version = "0.108.0" }
 deno_config = "=0.3.1"
 deno_io = "0.31.0"
 deno_graph = "=0.55.0"
