--- a/crates/base/Cargo.toml
+++ b/crates/base/Cargo.toml
@@ -53,6 +53,7 @@ sb_node = { version = "0.1.0", path = "../node" }
 eszip.workspace = true
 notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
 urlencoding.workspace = true
+deno_ffi = { workspace = true }
 
 [dev-dependencies]
 futures-util = { version = "0.3.28" }
