--- a/crates/sb_core/Cargo.toml
+++ b/crates/sb_core/Cargo.toml
@@ -17,6 +17,7 @@ deno_net.workspace = true
 deno_web.workspace = true
 deno_fetch.workspace = true
 deno_fs.workspace = true
+deno_ffi.workspace = true
 deno_websocket.workspace = true
 anyhow.workspace = true
 deno_core.workspace = true
